--- a/.cargo/config
+++ b/.cargo/config
@@ -7,6 +7,6 @@ bench-android = "bench --target aarch64-linux-android"
 
 [target.aarch64-linux-android]
 # You can configure linker here or by setting the environment variable CARGO_TARGET_AARCH64_LINUX_ANDROID_LINKER.
-# The following line is a typical path for NDK bundled in Android Studio on Mac.
+# The following line is a typical path to NDK bundled in Android Studio on Mac.
 # linker = "/Users/You/Library/Android/sdk/ndk/21.3.6528147/toolchains/llvm/prebuilt/darwin-x86_64/bin/aarch64-linux-android21-clang"
 runner = "./adb-runner.sh"
